--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     scroll-behavior: smooth;
   }
 }
-
+*{
+  box-sizing: border-box;
+}
 body {
   background: #f5f6f7;
   color: #333;
@@ -14,7 +16,7 @@ body {
 header {
   width: 100%;
   height: 100px;
-  background-color: #60A5FA;
+  background-color: #60a5fa;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -22,17 +24,44 @@ header {
   top: 0;
 }
 
-#logo {
-  height: auto;
-  /* border: 1px solid #1b1b32; */
-  border-radius: 100%;
-  max-width: 90px;
-  /* width: max(100px, 18vw); */
-  background-color: #90bff8;
-  /* aspect-ratio: 35 / 4; */
-  /* padding: 0.4rem; */
+@keyframes glow {
+  0%,
+  100% {
+    filter: drop-shadow(0 0 10px rgba(0, 217, 255, 0.8));
+  }
+  50% {
+    filter: drop-shadow(0 0 20px rgb(98, 0, 255));
+  }
 }
 
+#heading {
+  animation: glow 2s ease-in-out infinite;
+}
+
+@keyframes flip {
+  0%,
+  100% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+}
+
+#logo {
+  animation: flip 5s ease-in-out infinite;
+}
+
+#logo {
+  border-radius: 100%;
+  background-color: #90bff8;
+}
+
+#logo:hover {
+  animation: none;
+  transform: scale(1.1); 
+
+}
 h1 {
   color: white;
   font-size: min(5vw, 1.2em);
@@ -81,6 +110,8 @@ section {
   width: 80%;
   margin: 0 auto 10px auto;
   max-width: 800px;
+  align-items: center;
+  justify-content: center;
 }
 
 h1,
@@ -107,36 +138,12 @@ input {
   font-size: 16px;
 }
 
-.info label, .info input {
-  display: inline-block;
-}
-
-.info input {
-  width: 50%;
-  text-align: left;
-}
-
-.info label {
-  width: 10%;
-  min-width: 55px;
-  text-align: right;
-}
-
-.question-block {
-  text-align: left;
-  display: block;
-  width: 100%;
-  margin-top: 20px;
-  padding-top: 5px;
-}
-
 p {
   margin-top: 5px;
   padding-left: 15px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
 }
-
 
 .question {
   border: none;
@@ -158,218 +165,164 @@ button {
   border: 3px solid #3b3b4f;
 }
 
-footer {
-  background-color: #2a2a40;
-  display: flex;
-  justify-content: center;
-}
-
-footer,
-footer a {
-  color: #dfdfe2;
-}
-
-address {
-  text-align: center;
-  padding: 0.3em;
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
-}
-
-/* gggggggggggggg */
-.title{
+.title {
   font-size: calc(0.5rem + 1.5vw);
 }
-.header-link{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 20px;
-  }
-  .link{
+.header-link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 20px;
+}
+.link {
   margin-left: 20px;
   width: calc(1.5rem + 1.5vw);
   align-items: center;
   box-shadow: 2px 8px 8px rgba(0, 0, 0, 0.1);
   transition: 0.5s;
 }
-.link:hover{
-    transform: scale(1.1);
-    transition: 0.5s;
+.link:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
-h3{
-    color: #007acc;
-    font-size: 1.5rem;
+h3 {
+  color: #007acc;
+  font-size: 1.5rem;
 }
 .project {
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .project h3 {
-    font-size: 1.5rem;
-    color: #007acc;
+  font-size: 1.5rem;
+  color: #007acc;
 }
 
-#projects img{
-    max-width: 100%;
-    transition: 0.5s;
+#projects img {
+  max-width: 100%;
+  transition: 0.5s;
 }
-#projects img:hover{
-    transform: scale(1.1);
-    transition: 0.5s;
+#projects img:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
-.links{
-    display: flex;
-    justify-content: space-between;
+.links {
+  display: flex;
+  justify-content: space-between;
 }
-.links a{
- text-decoration: none;
-    padding: 10px 20px;
-    background: #0b9688;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.links a {
+  text-decoration: none;
+  padding: 10px 20px;
+  background: #0b9688;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
-.links a:hover{
-    background-color: #0056b3;
+.links a:hover {
+  background-color: #0056b3;
 }
 form {
-    max-width: 500px;
-    margin: 0 auto;
+  max-width: 500px;
+  margin: 0 auto;
 }
 
-form input, form textarea {
-    width: 100%;
-    margin-bottom: 1rem;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+form input,
+form textarea {
+  width: 100%;
+  margin-bottom: 1rem;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 form button {
-    padding: 10px 20px;
-    background: #007acc;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  margin: 0 auto;
+  padding: 10px 20px;
+  background: #60a5fa;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
-/* Skills Section */
+form button:hover {
+  background-color: #0056b3;
+}
 .skills {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .skills h3 {
-  text-align: left;
+  margin-right: auto;
+  padding-left: 20px;
 }
 
 .skill-category {
   display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 2rem;
-    width: 100%;
-  /* /* margin: 1rem; */
-  /* padding: 1rem; */
-  /* background: #f9f9f9; */
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  /* text-align: left;  */
-  /* display: flex; */
 }
-.skill-category span{
-  /* width: 600px; */
-  flex:  1 1 calc(30% - 1rem); 
+.skill-category span {
+  flex: 1 1 calc(30% - 1rem);
   margin-right: 4rem;
   padding: 1rem;
-
-}
-/* .front-end{
-background-image: url(https://media.licdn.com/dms/image/v2/D5612AQGSQNXqqRimJg/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1660243763578?e=2147483647&v=beta&t=Qq39UGtubkbUXHXhMkZBMzJGEbSF7BE5VyoOf7Vb4sI);
-background-size: cover;
 }
 
-.back-end{
-background-image: url(https://chisellabs.com/glossary/wp-content/uploads/2021/07/backend-in-website.png);
-background-size: 60% 80%;
-background-repeat: no-repeat;
-background-position: center;
-
-}
-
-.tools{
-background-image: url(https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
-background-size: 60% 80%;
-background-repeat: no-repeat;
-background-position: center;
-} */
 .skill-category h3 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-    color: #007acc;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  color: #007acc;
 }
 
 .skill-category ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .skill-category li {
-    margin-bottom: 0.5rem;
-    font-size: 1rem;
-    color: #333;
-    
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  color: #333;
 }
 
-.contact-info{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 2rem;
+.contact-info {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 2rem;
 }
-.contact-info div{
-    flex: 1 1 calc(30% - 1rem); 
-    margin: 1rem;
-    /* width: 30%; */
-    /* padding: 1rem; */
-    background: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
-
+.contact-info div {
+  flex: 1 1 calc(30% - 1rem);
+  margin: 1rem;
+  min-width: 180px;
+  background: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
-.contact-info img{
-    width: 50px;
-    color: #007acc;
+.contact-info img {
+  width: 50px;
+  color: #007acc;
 }
-.contact-info p{
-    font-size: 1rem;
-    color: #333;
+.contact-info p {
+  font-size: 1rem;
+  color: #333;
 }
-.contact-info .color{
-    color: #007acc;
-    cursor: pointer;
+.contact-info .color {
+  color: #007acc;
+  cursor: pointer;
 }
 /* Responsive Design */
 @media (max-width: 768px) {
-    .skill-category {
-        flex: 1 1 100%;
-    }
-    #logo{
-      display: none;
-    }
+  .skill-category {
+    flex: 1 1 100%;
+  }
+  #logo {
+    display: none;
+  }
 }
